<resources>
    <string name="app_name">Interaction</string>
    <string name="editText">Edit Text</string>
    <string name="button">Button</string>
    <string name="textview" />
    <string name="minusButton">-</string>
    <string name="plusButton">+</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="hello_world">Hello World</string>
    <string name="switchImage">Image switcher</string>
    <string name="state">State</string>
    <string name="text_button">Text Button</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="c">C</string>
    <string name="_0">0</string>
    <string name="eq">=</string>
    <string name="plus">+</string>
    <string name="sum">Sum</string>
</resources>