<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">


    <Button
        android:id="@+id/calc1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="50dp"
        android:onClick="calc1OnClick"
        android:text="@string/_1"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/calc2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/calc2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
        android:onClick="calc2OnClick"
        android:text="@string/_2"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/calc3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/calc1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calc3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="50dp"
        android:onClick="calc3OnClick"
        android:text="@string/_3"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/calc2"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/calc4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="50dp"
        android:onClick="calc4OnClick"
        android:text="@string/_4"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/calc5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/calc5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:onClick="calc5OnClick"
        android:text="@string/_5"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/calc6"
        app:layout_constraintStart_toEndOf="@+id/calc4"
        app:layout_constraintTop_toBottomOf="@+id/calc2" />

    <Button
        android:id="@+id/calc6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="50dp"
        android:onClick="calc6OnClick"
        android:text="@string/_6"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/calc5"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/calc7"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="50dp"
        android:onClick="calc7OnClick"
        android:text="@string/_7"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/calc8"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/calc8"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="23dp"
        android:onClick="calc8OnClick"
        android:text="@string/_8"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/calc9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/calc7"
        app:layout_constraintTop_toBottomOf="@+id/calc5" />

    <Button
        android:id="@+id/calc9"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="50dp"
        android:onClick="calc9OnClick"
        android:text="@string/_9"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/calc8"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/calcC"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="50dp"
        android:onClick="calcCOnClick"
        android:text="@string/c"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/calc0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/calc0"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:onClick="calc0OnClick"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/calcPlus"
        app:layout_constraintStart_toEndOf="@+id/calcC"
        app:layout_constraintTop_toBottomOf="@+id/calc8" />

    <Button
        android:id="@+id/calcPlus"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="50dp"
        android:onClick="calcPlusOnClick"
        android:text="@string/plus"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/calc0"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/sumOfCalc"
        android:layout_width="309dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcEq" />

    <Button
        android:id="@+id/calcEq"
        android:layout_width="310dp"
        android:layout_height="69dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:onClick="calcEqOnClick"
        android:text="@string/eq"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calc0" />
</androidx.constraintlayout.widget.ConstraintLayout>